# Claymore

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: ClaymoreConfig.cmake.in  CompilerSettings.cmake  ExternalDeps.cmake  InstallConfig.cmake  options.cmake
examples/: CMakeLists.txt
examples/minimal_square/: CMakeLists.txt  main.cpp
include/claymore/concepts/: UIComponent.hpp  UILayout.hpp  UIView,hpp
include/claymore/core/: ClaymoreEngine.hpp
include/claymore/displays/: DisplayRaylib.hpp
include/claymore/interfaces/: IDisplay.hpp  ILayoutComputer.hpp  IRenderer.hpp  IView.hpp
include/claymore/layout/: CMakeLists.txt
include/claymore/layout_computers/: LayoutComputerClay.hpp
include/claymore/renderer/: CMakeLists.txt
include/claymore/renderers/: RendererRaylib.hpp
include/claymore/structs/: Dimension.hpp  DisplayInput.hpp  Features.hpp  Geometry.hpp  RenderCommands.hpp  UIComponent.hpp
include/claymore/views/: ViewMinimal.hpp
src/core/: CMakeLists.txt  ClaymoreEngine.cpp
src/displays/: CMakeLists.txt  DisplayRaylib.cpp
src/layout/: CMakeLists.txt
src/layout_computers/: CMakeLists.txt  LayoutComputerClay.cpp
src/renderer/: CMakeLists.txt
src/renderers/: CMakeLists.txt  RendererRaylib.cpp
src/views/: CMakeLists.txt  ViewMinimal.cpp
